# Munasba3

./: .metadata  README.md  pubspec.yaml
.github/workflows/: build_apk.yml
android/: build.gradle  local.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
integration_test/: app_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bloc/: event_bloc.dart
lib/models/: budget_model.dart  event_model.dart  guest_model.dart  task_model.dart
lib/providers/: budget_provider.dart  event_provider.dart  guest_provider.dart  task_provider.dart  theme_provider.dart
lib/screens/: budget_screen.dart  create_event_screen.dart  event_detail_screen.dart  events_screen.dart  explore_screen.dart  guest_list_screen.dart  home_screen.dart  main_navigation.dart  profile_screen.dart  splash_screen.dart  tasks_screen.dart
lib/services/: api_service.dart  notification_service.dart  storage_service.dart
lib/theme/: app_theme.dart
lib/utils/: constants.dart  extensions.dart  helpers.dart
lib/widgets/: countdown_widget.dart  custom_button.dart  empty_state.dart  event_card.dart  loading_shimmer.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  main.cc
macos/Runner/: MainFlutterWindow.swift
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  main.cpp
